--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7887501892:AAEbuuIxwOzx07nd3k6t0W37krBIGHCQvKk
-ADMIN_ID=5536486483
-GROUP_ID=-1002051025491
+ADMIN_ID=5838205785,5536486483
+GROUP_ID=-1002051025491 
