--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 BOT_TOKEN=7887501892:AAEbuuIxwOzx07nd3k6t0W37krBIGHCQvKk
-ADMIN_ID=5838205785,5536486483
-GROUP_ID=-1002051025491 
+ADMIN_IDS=5838205785,5536486483
+TARGET_CHAT_ID=-1002051025491 
+
+
+
+
+
+
+
